# zc

./: .gitignore  CMakeLists.txt  DIARY  HISTORY  Makefile  Makefile.old  NOTES  RALLOC.txt  TODO  asm.hpp  ast.hpp  c-flex-scanner.hpp  c-ref.y  c.l  c.old.y  c.tab.cpp  c.tab.hpp  c.y  c.ypp  cgen-main.cc  cgen.cpp  cgen.hpp  config.hpp  crt-dump.sh  crt.z80  emit.cpp  emit.hpp  env.cpp  env.hpp  lexer-main.cc  optim.cpp  optim.hpp  parser-main.cc  peephole.cpp  peephole.hpp  ralloc.cpp  ralloc.hpp  scopedtab.h  scopedtab.hpp  semant-main.cc  (+7 more)
alg/: CMakeLists.txt  alg-dag.cpp
asm/: Makefile.old  asm-cond.hpp  asm-crt.cpp  asm-crt.hpp  asm-instr.cpp  asm-instr.hpp  asm-mem.cpp  asm-mem.hpp  asm-mode.cpp  asm-mode.hpp  asm-proto.cpp  asm-proto.hpp  asm-reg.cpp  asm-reg.hpp  asm-val.cpp  asm-val.hpp
ast/: ast-base.cpp  ast-base.hpp  ast-decl.cpp  ast-decl.hpp  ast-expr.cpp  ast-expr.h  ast-expr.hpp  ast-fwd.hpp  ast-main.hpp  ast-op.hpp  ast-size.cpp  ast-size.hpp  ast-stat.cpp  ast-stat.h  ast-stat.hpp  ast-type.cpp  ast-type.hpp
cgen/: cgen.cpp  emit.cpp
crt/: crt.z80
demo/: constants.c  constants.z80  memcpy.z80
inc/: asm-fwd.hpp  asm.hpp  ast-fwd.hpp  ast.hpp  cgen-fwd.hpp  cgen.hpp  emit.hpp  env.hpp  optim.hpp  scopedtab.hpp  semant.hpp  util.hpp
inc/alg/: alg-dag.hpp
inc/asm/: asm-instr.hpp  (+3 more)
optim/: optim.cpp
poster/: main.tex  refs.bib
ralloc/: ralloc.cpp
semant/: c.l  c.ypp  semant.cpp
tst/: Makefile  benchmark.conf  benchmark.sh  cgen-test.sh  crc32.sh  git-add-tests.sh  runner.sh  semant-test.sh
util/: CMakeLists.txt  util.cpp
(+101 files in other folders)
